# BeagleBone-Beat-Box-Application

./: CMakeLists.txt  README.md  accelerometer.c  accelerometer.h  audioMixer_template.c  joystick.c  main.c  music.c  music.h  udp_listen.c
Beat-Box-Server/: package-lock.json  package.json  server.js
Beat-Box-Server/lib/: udp_server.js
Beat-Box-Server/public/: index.html
Beat-Box-Server/public/javascripts/: beatbox_ui.js
